# db-itd

./: .gitignore  back-win.ps1  index.html  pack-mac-from-windows.ps1  pack-win.ps1  package-lock.json  package.json  setup-tauri-win.ps1  tsconfig.json
.github/workflows/: build-macos.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ResultRow.tsx  SearchBar.tsx
src/lib/: birth.ts  fts.ts  phone.ts
