[package]
name = "offline-finder"
version = "1.0.0"
description = "Ricerca offline su SQLite"
authors = ["Marco"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify"] }
once_cell = "1.19"
regex = "1.10"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }
